Ansible/Kubernetes/k8smanifests/certmanagertesting/staging/staging-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mrcurls-gateway-staging
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "staging.mrcurls.org"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: mrcurls-cert-staging
      hosts:
        - "staging.mrcurls.org"
---
